--- a/BottomsUp/BottomsUp.Web/Content/bottomsup.scss
+++ b/BottomsUp/BottomsUp.Web/Content/bottomsup.scss
@@ -1,6 +1,6 @@
 ﻿body {
     padding-top: 40px;
-    background: #ececec;
+    /*background: #ececec;*/
     font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
 }
 
@@ -32,7 +32,7 @@ nav.navbar {
 
 .container {
     padding-left: 50px;
-    background-color: #ddd;
+    /*background-color: #ddd;*/
     padding-bottom: 10px;
 }
 
@@ -146,23 +146,49 @@ ul.pws-tasks {
             margin-left: 0px;
         }
 
-        table {
-            tbody {
-                tr {
-                    cursor: pointer;
+        .task-header {
+            background-color: rgba(234, 206, 253, 1);
+            padding: 5px;
+            margin-bottom: 10px;
+            border-bottom: 1px solid gray;
+        }
+
+        ul#requirement-task-list {
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            min-height: 400px;
+            max-height: 400px;
+            overflow: auto;
+
+            button {
+                background-color: #fff;
+                padding: 0px;
+                &:focus {
+                    outline:none;
+                }
+                &:active {
+                    box-shadow: none;
                 }
             }
 
-            tfoot {
-                tr {
-                    td {
-                        border-top: 1px solid rgb(166, 166, 166);
-                    }
-                }
+            .glyphicon {
+                font-size: 24px;
+                display: block;
+                width: 38px;
+                padding: 7px;
+                background-position: center;
+                cursor: pointer;
 
-                font-size: .8em;
-                background-color: #c4c7cb;
-                color: rgb(107, 107, 107);
+                &:hover {
+                    background-color: rgb(221, 218, 218);
+                    border-radius: 20px;
+                }
+            }
+
+            li {
+                border-bottom: 1px solid rgb(189, 215, 237);
+                margin-bottom: 10px;
             }
         }
     }
