--- a/BottomsUp/BottomsUp.Web/Views/Shared/_Layout.cshtml
+++ b/BottomsUp/BottomsUp.Web/Views/Shared/_Layout.cshtml
@@ -21,8 +21,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">
-                    <img src="holder.js/20x20" class="img-circle my-button"
+                <a class="navbar-brand" href="/">
+                    <img data-src="holder.js/20x20" class="img-circle my-button"
                          style="float:left;margin-right:5px;">Bottoms Up
                 </a>
             </div>
