starting ui over

--- a/BottomsUp/BottomsUp.Web/Views/Home/Index.cshtml
+++ b/BottomsUp/BottomsUp.Web/Views/Home/Index.cshtml
@@ -1,137 +1,15 @@
 ﻿@{
     ViewBag.Title = "Index";
-    ViewBag.InitModule = "app";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container" style="padding-top:40px;">
-    <div ng-controller="proposalController" ng-cloak>
-        <table class="crud-grid table table-striped table-bordered table-condensed table-hover">
-            <tr>
-                <th style="width: 100px;">
-                    <div class="btn-toolbar"><i class="btn glyphicon glyphicon-plus" ng-click="toggleAddMode()"></i></div>
-                </th>
-                <th>Name</th>
-                <th>Modified By</th>
-                <th>Created</th>
-                <th>Updated</th>
-            </tr>
-            <tr ng-show="addMode">
-                <td>
-                    <div class="btn-toolbar">
-                        <div class="btn-group">
-                            <i class="btn glyphicon glyphicon-save" ng-click="addProposal()"></i>
-                            <i class="btn glyphicon glyphicon-remove" ng-click="toggleAddMode()"></i>
-                        </div>
-                    </div>
-                </td>
-                <td></td>
-                <td>
-                    <input ng-model="proposal.name" />
-                </td>
-            </tr>
-            <tr ng-repeat="p in proposals | orderBy:'id':true">
-                <td>
-                    <div class="btn-toolbar" ng-show="p.editMode == null || p.editMode == false">
-                        <div class="btn-group">
-                            <i class="btn glyphicon glyphicon-edit" ng-click="toggleEditMode(p)"></i>
-                            <i class="btn glyphicon glyphicon-trash" ng-click="deleteProposal(p)"></i>
-                        </div>
-                    </div>
-                    <div class="btn-toolbar" ng-show="p.editMode == true">
-                        <div class="btn-group">
-                            <i class="btn glyphicon glyphicon-save" ng-click="updateProposal(p)"></i>
-                            <i class="btn glyphicon glyphicon-remove" ng-click="toggleEditMode(p)"></i>
-                        </div>
-                    </div>
-                </td>
-                <td>
-                    <span ng-show="p.editMode == null || p.editMode == false"><a data-ng-href="/proposals/{{p.id}}">{{p.name}}</a></span>
-                    <input ng-model="p.name" ng-show="p.editMode == true" />
-                </td>
-                <td>{{p.modifiedBy}}</td>
-                <td>{{p.created | date:'medium' }}</td>
-                <td>{{p.updated | date:'medium'}}</td>
-            </tr>
-        </table>
-    </div>
+<div class="container" style="padding-top:40px;" ng-view>
+    
+
+   
 </div>
 
 @section scripts {
-
-    <script>
-        var app = angular.module('app', ['ngResource']);
-
-        app.factory('proposalFactory', function ($http, $resource) {
-            return $resource('api/v1/proposals/:pid',
-                { pid: '@@id' },
-                { 'update': { method: 'PUT' } },
-                { 'query': { method: 'GET', isArray: true } });
-        });
-
-        app.factory('notificationFactory', function () {
-            return {
-                success: function () {
-                    toastr.success("Success");
-                },
-                error: function (text) {
-                    toastr.error(text, "Error");
-                }
-            };
-        });
-
-        app.controller('proposalController', function ($scope, $q, $window, proposalFactory, notificationFactory) {
-            $scope.proposals = [];
-            $scope.addMode = false;
-
-            $scope.toggleAddMode = function () {
-                $scope.addMode = !$scope.addMode;
-            };
-
-            $scope.toggleEditMode = function (proposal) {
-                proposal.editMode = !proposal.editMode;
-            };
-
-            var successCallback = function (e, cb) {
-                notificationFactory.success();
-                $scope.getProposals(cb);
-            };
-
-            var successPostCallback = function (e) {
-                successCallback(e, function () {
-                    $scope.toggleAddMode();
-                    $scope.proposal = {};
-                });
-            };
-
-            var errorCallback = function (e) {
-                notificationFactory.error(e.data.Message);
-            };
-
-            $scope.addProposal = function () {
-                proposalFactory.save($scope.proposal, successPostCallback, errorCallback);
-            };
-
-            $scope.deleteProposal = function (proposal) {
-                var deleteUser = $window.confirm('Are you absolutely sure you want to delete?');
-                if (deleteUser) {
-                    proposalFactory.delete({ id: proposal.id }, successCallback, errorCallback);
-                }
-            };
-
-            $scope.updateProposal = function (proposal) {
-                proposalFactory.update({ id: proposal.id }, proposal, successCallback, errorCallback);
-            };
-
-            $scope.getProposals = function (cb) {
-                proposalFactory.query(function (data) {
-                    $scope.proposals = data;
-                    if (cb) cb();
-                });
-            };
-
-            $scope.getProposals();
-        });
-    </script>
-
+<script src="~/js/router.js"></script>
+<script src="~/js/dataService.js"></script>
 }
