--- a/BottomsUp/BottomsUp.Web/Views/Shared/_Layout.cshtml
+++ b/BottomsUp/BottomsUp.Web/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html ng-app="@ViewBag.InitModule">
+<html ng-app="bottomsUp">
 @using StackExchange.Profiling;
 <head>
     <meta charset="utf-8" />
@@ -11,59 +11,9 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top" style="">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed " data-toggle="collapse"
-                        data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/#/">
-                    <img data-src="holder.js/20x20" class="img-circle my-button"
-                         style="float:left;margin-right:5px;">Bottoms Up
-                </a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li><a href="#" class="">Link 1</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Link</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-                            Dropdown
-                            <span class="caret"></span>
-                        </a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
 
     @RenderBody()
 
-    <div class="sb-slidebar sb-left sb-static">
-        <h3>Actions Items</h3>
-        <ul class="sidebar action-items">
-            <li><a href="">Add New Task</a></li>
-        </ul>
-        <h3>Status</h3>
-        <h3>Another Setting</h3>
-    </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryval")
@@ -73,7 +23,7 @@
 
 
     @RenderSection("scripts", required: false)
-    @MiniProfiler.RenderIncludes()
+    @*@MiniProfiler.RenderIncludes()*@
 
 
 </body>
