--- a/BottomsUp/BottomsUp.Web/js/views/proposals/details.html
+++ b/BottomsUp/BottomsUp.Web/js/views/proposals/details.html
@@ -1,1 +1,24 @@
-﻿<h2>{{ proposal.name }}</h2>
+﻿<h2>{{ proposal.name }} ({{proposal.id }})<span class="pull-right">Modified By: {{ proposal.modifiedBy | date: 'medium' }} Created: {{ proposal.created | date: 'medium' }}</span></h2>
+
+<table class="table table-striped table-bordered table-condensed table-hover">
+    <tr>
+        <th>PWS Number</th>
+        <th>Category</th>
+        <th>Description</th>
+        <th>Comments</th>
+        <th>Total Hours</th>
+        <th>Modified By</th>
+        <th>Created</th>
+        <th>Updated</th>
+    </tr>
+    <tr ng-repeat="r in requirements | orderBy:'id':true" ng-click="requirementSelected(r)">
+        <td>{{ r.pwsNumber }}</td>
+        <td>{{ r.category.name }}</td>
+        <td>{{ r.description }}</td>
+        <td>{{ r.comments }}</td>
+        <td>{{ r.totalHours }}</td>
+        <td>{{ r.modifiedBy }}</td>
+        <td>{{ r.created | date:'medium' }}</td>
+        <td>{{ r.updated | date:'medium'}}</td>
+    </tr>
+</table>
