--- a/BottomsUp/BottomsUp.Web/Views/Home/Index.cshtml
+++ b/BottomsUp/BottomsUp.Web/Views/Home/Index.cshtml
@@ -11,5 +11,6 @@
 
 @section scripts {
 <script src="~/js/router.js"></script>
-<script src="~/js/dataService.js"></script>
+<script src="~/js/controllers/proposals/proposalControllers.js"></script>
+<script src="~/js/services/dataServices.js"></script>
 }
