--- a/BottomsUp/BottomsUp.Web/js/views/proposals/index.html
+++ b/BottomsUp/BottomsUp.Web/js/views/proposals/index.html
@@ -7,7 +7,7 @@
     </tr>
     <tr ng-repeat="p in proposals | orderBy:'id':true">
         <td>
-            <a data-ng-href="#/proposals/{{p.id}}">{{p.name}}</a>
+            <a data-ng-href="#/proposals/{{p.id}}/requirements">{{p.name}}</a>
         </td>
         <td>{{p.modifiedBy}}</td>
         <td>{{p.created | date:'medium' }}</td>
