--- a/BottomsUp/BottomsUp.Web/js/views/proposals/details.html
+++ b/BottomsUp/BottomsUp.Web/js/views/proposals/details.html
@@ -22,7 +22,7 @@
             <div class="box-body">
                 <table class="table table-striped table-bordered table-condensed table-hover">
                     <tr>
-                        <th style="width:100px;">PWS Number</thstyle>
+                        <th style="width:100px;">PWS Number</th>
                         <th style="width:100px;">Category</th>
                         <th>Description</th>
                         <th style="width:100px;">Total Hours</th>
@@ -30,7 +30,7 @@
                         <th style="width:200px;">Updated</th>
                         <th style="width:100px;">&nbsp;</th>
                     </tr>
-                    <tr ng-repeat="r in proposal.requirements | orderBy:'id':true" ng-click="requirementSelected(r)">
+                    <tr ng-repeat="r in vm.proposal.requirements" ng-click="vm.requirementSelected(r)">
                         <td>{{ r.pwsNumber }}</td>
                         <td>{{ r.category.name }}</td>
                         <td>{{ r.description }}</td>
@@ -49,7 +49,9 @@
                 </table>
             </div><!-- /.box-body -->
         </div><!-- /.box -->
-        <div class="box" style="min-height:200px;"ng-controller="taskViewController as taskView">
+
+        <!-- Default box -->
+        <div class="box" style="min-height:200px;">
             <div class="box-header with-border">
                 <h3 class="box-title">Tasks</h3>
                 <span class="pull-right"><a href="javascript::;" class="btn btn-sm btn-info btn-flat pull-left">New Task</a></span>
@@ -66,26 +68,26 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr ng-repeat="t in selectedRequirement.tasks | orderBy:'id':true">
+                        <tr ng-repeat="t in vm.dataService.requirementTasks">
                             <td>{{ t.labor.name }}</td>
                             <td>{{ t.description }}</td>
                             <td>{{ t.modifiedBy }}</td>
                             <td>{{ t.updated | date:'medium'}}</td>
                             <td>
                                 <div ng-show="t.editMode == null || t.editMode == false">
-                                    <button title="Edit" class="btn btn-sm btn-info" ng-click="toggleEditMode(t)">
+                                    <button title="Edit" class="btn btn-sm btn-info" ng-click="vm.toggleEditMode(t)">
                                         <em class="fa fa-pencil"></em>
                                     </button>
-                                    <button title="Delete" class="btn btn-sm btn-danger" ng-click="deleteTask(t)">
+                                    <button title="Delete" class="btn btn-sm btn-danger" ng-click="vm.deleteTask(t)">
                                         <em class="fa fa-trash"></em>
                                     </button>
                                 </div>
 
                                 <div ng-show="t.editMode == true">
-                                    <button title="Save" class="btn btn-sm btn-info" ng-click="updateTask(t)">
+                                    <button title="Save" class="btn btn-sm btn-info" ng-click="vm.updateTask(t)">
                                         <em class="fa fa-save"></em>
                                     </button>
-                                    <button title="Cancel" class="btn btn-sm btn-default" ng-click="toggleEditMode(t)">
+                                    <button title="Cancel" class="btn btn-sm btn-default" ng-click="vm.toggleEditMode(t)">
                                         <em class="fa fa-reply"></em>
                                     </button>
                                 </div>
