swapped out ng-route for ui-router.

--- a/BottomsUp/BottomsUp.Web/Views/Home/Index.cshtml
+++ b/BottomsUp/BottomsUp.Web/Views/Home/Index.cshtml
@@ -3,14 +3,13 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div ng-view>
+<div ui-view>
     
 
    
 </div>
 
 @section scripts {
-<script src="~/js/controllers/proposals/proposalControllers.js"></script>
-<script src="~/js/controllers/tasks/taskViewController.js"></script>
-<script src="~/js/services/dataServices.js"></script>
+<script src="~/app/proposals/proposalControllers.js"></script>
+<script src="~/app/services/dataServices.js"></script>
 }
